[package]
name = "seedstudio-gd32v-examples"
version = "0.1.0"
description = "More example code for the Seeedstudio GD32VF103 eval board."
license = "MIT"
edition = "2018"

[dependencies]
gd32vf103xx-hal = "0.2.0"
embedded-hal = "0.2.3"
nb = "0.1.2"
riscv-rt = "0.6.1"
riscv = "0.5.4"
panic-halt = "0.2.0"

[[example]]
name = "leds"
